take out sbt