@@ -7,13 +7,14 @@ RUN apk add --no-cache --virtual=build-dependencies curl ca-certificates && \
     export ALPINE_GLIBC_BASE_URL="https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64" && \
     export ALPINE_GLIBC_PACKAGE="glibc-2.21-r2.apk" && \
     export ALPINE_GLIBC_BIN_PACKAGE="glibc-bin-2.21-r2.apk" && \
-    curl -jL https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk | cat > /tmp/glibc-2.21-r2.apk && \
+    curl -jL https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk \
+        | cat > /tmp/glibc-2.21-r2.apk && \
     curl -jL https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk \
         | cat > /tmp/glibc-bin-2.21-r2.apk &&\   
     apk add --no-cache --allow-untrusted /tmp/glibc-2.21-r2.apk /tmp/glibc-bin-2.21-r2.apk && \
     /usr/glibc/usr/bin/ldconfig "/lib" "/usr/glibc/usr/lib" && \
     echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
-    rm -rf /tmp && mkdir /tmp && \
+    rm -rf /tmp/* && \
     mkdir -p /usr/lib/jvm/default-jvm && \
     curl -jkLH "Cookie: oraclelicense=accept-securebackup-cookie;" http://download.oracle.com/otn-pub/java/jdk/8u66-b17/jdk-8u66-linux-x64.tar.gz \
         | tar -xz \
@@ -52,18 +53,5 @@ RUN apk add --no-cache --virtual=build-dependencies curl ca-certificates && \
            --exclude=jdk1.8.0_66/jre/lib/jfr \
            --exclude=jdk1.8.0_66/jre/lib/oblique-fonts  \
          -f - -C /usr/lib/jvm/default-jvm && \
-       mkdir -p /usr/share/sbt  && mkdir /usr/share/sbt/boot && mkdir /usr/share/sbt/ivy && \
-       curl -jL https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.13.9/sbt-launch.jar | cat  > /usr/share/sbt/sbt-launch.jar &&\
        apk del build-dependencies curl ca-certificates && \
-       rm -rf /tmp && mkdir /tmp
-
-ENV JAVA_HOME /usr/lib/jvm/default-jvm/jdk1.8.0_66
-ENV PATH ${PATH}:${JAVA_HOME}/bin
-
-RUN  touch /usr/share/sbt/sbt && echo '#!/bin/sh' > /usr/share/sbt/sbt && \
-     echo 'SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"' >> /usr/share/sbt/sbt &&\
-     echo 'java $SBT_OPTS -Dsbt.log.noformat=true -Dsbt.boot.directory=/usr/share/sbt/boot \
-	 -Dsbt.version=0.13.9 -Divy=/usr/share/sbt/ivy -jar /usr/share/sbt/sbt-launch.jar "$@"' >> /usr/share/sbt/sbt &&\
-     chmod u+x /usr/share/sbt/sbt 
-
-ENV PATH ${PATH}:/usr/share/sbt
+       rm -rf /tmp/*
